--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp6.html
@@ -28,12 +28,10 @@
                            <div class="blue-arrow"></div>
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
-                        <div class="client_area col-sm-12">
-                           <div class="client_image col-sm-2"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img1.png" alt=""></div>
-                           <div class="col-sm-9">
-                              <div class="col-sm-9 editContent client_name">James Deck</div>
-                              <div class="col-sm-9 editContent client_data"><span>CEO at ABC Inc</span></div>
-                           </div>
+                        <div class="client_area col-xs-12">
+                           <div class="client_image"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img1.png" alt=""></div>
+                           <div class="col-xs-8 editContent client_name">James Deck</div>
+                           <div class="col-xs-8 editContent client_data"><span>CEO at ABC Inc</span></div>                           
                         </div>
                      </div>
                      <!-- /End Testimonial Box --> 
@@ -43,12 +41,12 @@
                            <div class="green-arrow"></div>
                             <div class="editContent content"> “Omnis commodo consequat ei mea. Movet praesent postulant mea at, at nam dolorem lucilius. Soleat interesset mea cu, eum regione menandri definitionem no. Soleat interesset mea cu, eum regione no. Omnis commodo consequat ei at, at nam dolorem lucilius. Movet praesent postulant mea at, at nam dolorem lucilius.” </div>
                         </div>
-                        <div class="client_area col-sm-12">
-                           <div class="client_image col-sm-2"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img2.png" alt=""></div>
-                           <div class="col-sm-9">
-                              <div class="col-sm-9 editContent client_name">James Deck</div>
-                              <div class="col-sm-9 editContent client_data"><span>CEO at ABC Inc</span></div>
-                           </div>
+                        <div class="client_area col-xs-12">
+                           <div class="client_image"><img src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/newtemp6img2.png" alt=""></div>
+                              <div class="col-xs-8 editContent client_name">James Deck</div>
+                              <div class="col-xs-8 editContent client_data">
+                                 <span>CEO at ABC Inc</span>
+                              </div>                          
                         </div>
                      </div>
                      <!-- /End Testimonial Box --> 
