twilio aplphaneumeric dialpad

--- a/agile-frontend/WebContent/flatfull/tpl/dialler.html
+++ b/agile-frontend/WebContent/flatfull/tpl/dialler.html
@@ -40,49 +40,56 @@
 			</div>
 				<div class="row" style="padding:0px 25px">
 					<div class="col-md-4 dial1 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">1</div>
+						<div style="font-size:15px !important;padding: 7px;">1</div>
 						<div></div>
 					</div>
 					<div class="col-md-4 dial2 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important ;padding: 10px;">2</div>
-						<!--<div style="font-size:12px !important;padding: 10px;">ABC</div>-->
+						<div style="font-size:15px !important ;padding: 7px;">2</div>
+						<div style="font-size: 9px !important;padding: -4px;">ABC</div>
 					</div>
 					<div class="col-md-4 dial3 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">3</div>
+						<div style="font-size:15px !important;padding: 7px;">3</div>
+						<div style="font-size: 9px !important;padding: -4px;">DEF</div>
 					</div>
 				</div>
 				<div class="row" style="padding:0px 25px">
 					<div class="col-md-4 dial4 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">4</div>
+						<div style="font-size:15px !important;padding: 7px;">4</div>
+						<div style="font-size: 9px !important;padding: -4px;">GHI</div>
 					</div>
 					<div class="col-md-4 dial5 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">5</div>
+						<div style="font-size:15px !important;padding: 7px;">5</div>
+						<div style="font-size: 9px !important;padding: -4px;">JKL</div>
 					</div>
 					<div class="col-md-4 dial6 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">6</div>
+						<div style="font-size:15px !important;padding: 7px;">6</div>
+						<div style="font-size: 9px !important;padding: -4px;">MNO</div>
 				</div>
 				</div>
 				<div class="row" style="padding:0px 25px">
 					<div class="col-md-4 dial7 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">7</div>
+						<div style="font-size:15px !important;padding: 7px;">7</div>
+						<div style="font-size: 9px !important;padding: -4px;">PQRS</div>
 					</div>
 					<div class="col-md-4 dial8 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px;color:#00c8ff;padding: 10px;">8</div>
+						<div style="font-size:15px;color:#00c8ff;padding: 7px;">8</div>
+						<div style="font-size: 9px !important;padding: -4px;">TUV</div>
 					</div>
 					<div class="col-md-4 dial9 keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">9</div>
+						<div style="font-size:15px !important;padding: 7px;">9</div>
+						<div style="font-size: 9px !important;padding: -4px;">WXYZ</div>
 					</div>
 				</div>
 				<div class="row" style="padding:0px 25px">
 					<div class="col-md-4 dial-star keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">*</div>
+						<div style="font-size:15px !important;padding: 7px;">*</div>
 						<div></div>
 					</div>
 					<div class="col-md-4 dial0 keyPad c-p text-center" style="padding:3px ;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">0</div>
+						<div style="font-size:15px !important;padding: 7px;">0</div>
 					</div>
 					<div class="col-md-4 dial-hash keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:20px !important;padding: 10px;">#</div>
+						<div style="font-size:15px !important;padding: 7px;">#</div>
 						<div></div>
 					</div>
 				</div>
