Email Settings new tab

--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/admin-settings.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/admin-settings.html
@@ -54,6 +54,7 @@
 			<a href="#integrations-stats" class="stats-tab list-group-item">{{agile_lng_translate 'admin-settings' 'stats'}}</a>
 
 			<a href="#analytics-code" class="analytics-code-tab list-group-item">API</a>
+			<a href="#verify-domain" class="verify-domain-tab list-group-item">Email Settings</a>
 				
 
 		<!-- <a href="#menu-settings" class="menu-settings-tab list-group-item">Menu Settings</a> -->
