--- a/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-sendgrid-dkim.html
+++ b/agile-frontend/WebContent/flatfull/tpl/admin-settings/settings-sendgrid-dkim.html
@@ -35,7 +35,7 @@
   </div>
   </div>
    <div class="{{#is_mobile}} text-center {{/is_mobile}}">
-        <a href="#api-analytics" class="btn btn-sm btn-success" onclick="validateWhitelable();" style="margin: -8px 15px 8px 1px; float:right" id="validate_whitelabel">{{agile_lng_translate 'landing-pages' 'verify'}}</a>
+        <a href="javascript:void(0)" class="btn btn-sm btn-success" onclick="validateWhitelable();" style="margin: -8px 15px 8px 1px; float:right" id="validate_whitelabel">{{agile_lng_translate 'landing-pages' 'verify'}}</a>
      </div>
   {{else}}
   {{#if Error}}
