--- a/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
+++ b/agile-frontend/WebContent/flatfull/tpl/workflow/workflow-alerts.html
@@ -81,7 +81,7 @@
 		</div>
 		<div class="modal-body">
 			<span class="verification-msg">
-				{{agile_lng_translate 'Verify-email' 'encourage-msg-dkim'}}
+				Agile needs your new email to be verified. Please enter your new email address.
 			</span>
 				<form id="verify-email-form">
 					<fieldset>            
@@ -103,6 +103,7 @@
 								<span id="alert-msg"></span>
 	                    	</div>
 	                    </div>
+	                    <div id="emial-domain-observer"></div>
 					</fieldset>
 				</form>
 		</div>
