--- a/agile-frontend/WebContent/flatfull/tpl/dialler.html
+++ b/agile-frontend/WebContent/flatfull/tpl/dialler.html
@@ -82,11 +82,12 @@
 				</div>
 				<div class="row" style="padding:0px 25px">
 					<div class="col-md-4 dial-star keyPad c-p text-center" style="padding:3px;color:#00c8ff">
-						<div style="font-size:15px !important;padding: 7px;">*</div>
+						<div style="font-size:22px !important;padding: 7px;">*</div>
 						<div></div>
 					</div>
 					<div class="col-md-4 dial0 keyPad c-p text-center" style="padding:3px ;color:#00c8ff">
 						<div style="font-size:15px !important;padding: 7px;">0</div>
+						<div style="font-size: 17px !important;padding: -4px;">+</div>
 					</div>
 					<div class="col-md-4 dial-hash keyPad c-p text-center" style="padding:3px;color:#00c8ff">
 						<div style="font-size:15px !important;padding: 7px;">#</div>
