add more 6 new blocks

--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp12.html
@@ -15,6 +15,11 @@
             <div class="wrapper">
                <div class="container">
                   <div class="row">
+                     <div class="col-sm-6 col-lg-6">
+                        <div class="col-image-holder">
+                           <img style="height:370px;" alt="" class="img-responsive"  ="img" height="800" src=" https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="">
+                        </div>
+                     </div>
                      <div class="col-md-6 col-sm-6">
                         <div class="logo">
                            <span class="fa fa-compass fa-4x"></span>
@@ -32,11 +37,7 @@
                            </div>
                         </div>
                      </div>
-                     <div class="col-sm-6 col-lg-6">
-                        <div class="col-image-holder">
-                           <img style="height:370px;" alt="" class="img-responsive" height="800" src=" https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="">
-                        </div>
-                     </div>
+                     
                   </div>
                </div>
             </div>
