--- a/agile-frontend/WebContent/misc/pagebuilder/elements/layout2.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/layout2.html
@@ -57,7 +57,7 @@
                                                   
                            <div class="col-sm-6 col-lg-6">
                                 <div class="col-image-holder text-center">
-                                    <img alt="" class="img-responsive" data-selector="img" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="" >
+                                    <img alt="" class="img-responsive" height="800" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/elements/images/block-images/layout2img1.jpg" width="" >
                                 </div>
                              </div>
                         
