fixed issues related to image caption block

--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-image-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-image-text.html
@@ -31,7 +31,7 @@
                                                         <td height="15" width="100%"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="image-caption-content text" align="left">
+                                                        <td class="image-caption-content text block-text" align="left">
                                                             <div style="margin: 0px 0px 10px 0px; " class="textFix"> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
                                                         </td>
                                                     </tr>
@@ -64,7 +64,7 @@
                                                         <td height="15" width="100%"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="image-caption-content text" align="left">
+                                                        <td class="image-caption-content text block-text" align="left">
                                                             <div style="margin: 0px 0px 10px 0px;" class="textFix">  Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur.</div>
                                                         </td>
                                                     </tr>
