--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/column-2-text.html
@@ -23,7 +23,7 @@
                                                         <td height="15" width="100%"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="image-caption-content text" align="left">
+                                                        <td class="image-caption-content text block-text" align="left">
                                                             <div style="margin: 0px 0px 10px 0px;" class="textFix"> Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
                                                         </td>
                                                     </tr>
@@ -48,7 +48,7 @@
                                                         <td height="15" width="100%"></td>
                                                     </tr>
                                                     <tr>
-                                                        <td class="image-caption-content text" align="left">
+                                                        <td class="image-caption-content text block-text" align="left">
                                                             <div style="margin: 0px 0px 10px 0px;" class="textFix">  Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. </div>
                                                         </td>
                                                     </tr>
