--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/image-caption.html
@@ -11,11 +11,11 @@
          <table class="main" width="640" cellspacing="0" cellpadding="0" border="0" bgcolor="#FFFFFF" align="center" style="background-color:#FFFFFF;" data-type="imgcaption">
             <tbody>
                <tr>
-                  <td class="image-caption" style="padding: 0px 50px 0px 50px;">
+                  <td class="image-caption" style="padding: 0px 50px 15px 50px;">
                      <table align="center" border="0" cellpadding="0" cellspacing="0" width="100%">
                         <tr>
                            <td>
-                              <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240">
+                              <table class="image-caption-column" align="left" border="0" cellpadding="0" cellspacing="0" width="240" style="margin: 0 auto;">
                                 <tbody>
                                     <tr>
                                         <td height="15" width="100%"></td>
@@ -25,14 +25,6 @@
                                             <img  border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/placeholder_350x150.png" style="display: block;" width="265" height="140" border="0" >
                                             </td>
                                         </tr>
-
-                                        <tr>
-                                            <td height="15" width="100%"></td>
-                                        </tr>
-
-                                        <tr>
-                                            <td class="image-caption-bottom-gap" height="5" width="100%"></td>
-                                        </tr>
                                 </tbody>
                               </table>
                               <table class="image-caption-column-text" align="right" border="0" cellpadding="0" cellspacing="0" width="240" data-align="right">
@@ -41,19 +33,11 @@
                                         <td height="15" width="100%"></td>
                                     </tr>
                                         <tr>
-                                            <td class="text-block" >
+                                            <td class="text-block block-text" >
                                             <div style="ine-height: 22px;" class="textFix">
                                             Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
                                             </div>
                                             </td>
-                                        </tr>
-
-                                        <tr>
-                                            <td height="15" width="100%"></td>
-                                        </tr>
-
-                                        <tr>
-                                            <td class="image-caption-bottom-gap" height="5" width="100%"></td>
                                         </tr>
                                 </tbody>
                               </table>
