--- a/agile-frontend/WebContent/misc/emailbuilder/blocks/column-3-text.html
+++ b/agile-frontend/WebContent/misc/emailbuilder/blocks/column-3-text.html
@@ -19,7 +19,7 @@
                                                             <td height="15" width="100%"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td align="left" class="image-caption-content text" >
+                                                            <td align="left" class="image-caption-content text block-text" >
                                                                 <div class="textFix selected-item" style="margin: 0px 0px 10px;">
                                                                     <div style="text-align: justify;">
                                                                         Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
@@ -48,8 +48,8 @@
                                                             <td height="15" width="100%"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td align="left" class="image-caption-content text" >
-                                                                <div class="textFix" style="margin: 0px 0px 10px; border: none;">
+                                                            <td align="left" class="image-caption-content text block-text" >
+                                                                <div class="textFix " style="margin: 0px 0px 10px; border: none;">
                                                                     <div style="text-align: justify;">
                                                                         Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
                                                                     </div>
@@ -77,7 +77,7 @@
                                                             <td height="15" width="100%"></td>
                                                         </tr>
                                                         <tr>
-                                                            <td align="right" class="image-caption-content text" >
+                                                            <td align="right" class="image-caption-content text block-text" >
                                                                 <div class="textFix" style="margin: 0px 0px 10px; border: none;">
                                                                     <div style="text-align: justify;">
                                                                         Lorem ipsum dolor sit amet, consectetur adipisci elit, sed eiusmod tempor incidunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrum exercitationem ullam corporis suscipit laboriosam, nisi ut aliquid ex ea commodi consequatur. Quis aute iure reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint obcaecat cupiditat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
