--- a/agile-frontend/WebContent/flatfull/tpl/deal-update-modal.html
+++ b/agile-frontend/WebContent/flatfull/tpl/deal-update-modal.html
@@ -81,7 +81,7 @@
               <div class="control-group form-group"> 
            <label class="control-label col-sm-3">{{agile_lng_translate 'deal-view' 'probability'}} <span class="field_req">*</span></label> 
            <div class="controls col-sm-7">
-              <div class="input-group probability-form"> 
+              <div class="input-group probability-form" style="width:100%"> 
                 <input type="text" value="20" class="form-control digits deal-pro required positive_number" id="probability" name="probability" placeholder="{{agile_lng_translate 'deal-view' 'probability'}} " max="100"> 
                 <span class="input-group-addon no-border" id="basic-addon2" style="/* background: #fff; */">%</span> 
               </div>
