Comment warning message

--- a/agile-frontend/WebContent/flatfull/tpl/socialsuite/add-stream.html
+++ b/agile-frontend/WebContent/flatfull/tpl/socialsuite/add-stream.html
@@ -1,6 +1,6 @@
 <script id="socialsuite-social-network-template" type="text/html">
 <div class="at-center">
-<p>We are working with Twitter for API related issues. Apologies for inconvenience.</p>
+<!-- <p>We are working with Twitter for API related issues. Apologies for inconvenience.</p> -->
    <label class="font15">{{agile_lng_translate 'social' 'choose-your-social-network'}}
    </label> 
    <div class="row">
