--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp11.html
@@ -27,10 +27,10 @@
                      </div>
                      <!-- /.editContent -->
                      <div>
-                        <a href="#" style="border: none; text-decoration: none" class="app-store">
+                        <a href="#" style="border: none; text-decoration: none" class="propClone app-store">
                         <img border="0" src="http://prisma-ai.com/images/app-store-button.png" width="192" height="60">
                         </a>
-                        <a href="#" style="border: none; text-decoration: none" class="play-store margin-left-15">
+                        <a href="#" style="border: none; text-decoration: none" class=" propClone play-store margin-left-15">
                         <img border="0" src="http://prisma-ai.com/images/gplay-button.jpg" width="192" height="60">
                         </a>
                      </div>
