--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp8.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp8.html
@@ -31,8 +31,8 @@
     					<div class="col-md-12">
     										
     						<div class="text-center">
-    							<a href="#" class="btn btn-large btn-embossed" style="background-color: rgb(93, 173, 226);">Sign up</a>
-    							<a href="#" class="btn btn-large btn-embossed sec-btn" style="background-color: rgb(26, 188, 156);">Sign in</a>
+    							<a href="#" class=" btn-info btn btn-large btn-embossed margin-left-15">Sign up</a>
+    							<a href="#" class="btn btn-large btn-embossed margin-left-15 btn-primary " >Sign in</a>
     						</div>
     				
     					</div>
