--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp9.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp9.html
@@ -22,19 +22,19 @@
                      <div class="col-md-12">
                         <div class="text-center">
                            <td class="social" align="center" style="padding: 15px 50px 15px 50px;">
-                              <a href="" style="border: none; text-decoration: none" class="facebook">
+                              <a href="" style="border: none; text-decoration: none" class="propClone margin-left-15 facebook">
                               <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/facebook.png" width="50" height="50">
                               </a>
-                              <a href="" style="border: none; text-decoration: none" class="margin-left-15 twitter">
+                              <a href="" style="border: none; text-decoration: none" class="propClone margin-left-15 twitter">
                               <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/twitter.png" width="50" height="50">
                               </a>
-                              <a href="" style="border: none; text-decoration: none" class=" margin-left-15 linkedin">
+                              <a href="" style="border: none; text-decoration: none" class=" propClone margin-left-15 linkedin">
                               <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/linkedin.png" width="50" height="50">
                               </a>
-                              <a href="" style="border: none; text-decoration: none" class=" margin-left-15 youtube">
+                              <a href="" style="border: none; text-decoration: none" class="propClone margin-left-15 youtube">
                               <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/youtube.png" width="50" height="50">
                               </a>
-                              <a href="" style="border: none; text-decoration: none" class="margin-left-15 instagram">
+                              <a href="" style="border: none; text-decoration: none" class="propClone margin-left-15 instagram">
                               <img border="0" src="https://s3.amazonaws.com/agilecrm/editor/email/staticfiles/instagram.png" width="50" height="50">
                               </a>
                            </td>
