add edit in dropdown in details

--- a/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-company-detail.html
+++ b/agile-frontend/WebContent/flatfull/tpl/contact-detail/contact-company-detail.html
@@ -29,8 +29,8 @@
 								<span class="caret m-l-none" style="margin-top:-11px;"></span>
 								</button>
 								<ul class="dropdown-menu pull-right text-sm">
-<!--<li> <a href="#company-edit"><i class="fa fa-edit" style="margin-right:2px"></i> Edit</a></li>
-<li class="divider"></li>-->
+									<li> <a href="#company-edit"><i class="fa fa-edit" style="margin-right:2px"></i> Edit</a></li>
+									<li class="divider"></li>
 									<li><a href='#' class="contact-add-note"><i
 											class="fa fa-file-text"></i> {{agile_lng_translate 'deal-view' 'add-note'}}</a></li>
 									<li><a href='#' class="contact-add-task"><i
@@ -468,8 +468,8 @@
 								<span class="caret m-l-none" style="margin-top:-11px;"></span>
 								</button>
 								<ul class="dropdown-menu pull-right text-sm"  role="menu">
-<!--<li> <a href="#company-edit"><i class="fa fa-edit" style="margin-right:2px"></i> Edit</a></li>
-<li class="divider"></li>-->
+									<li> <a href="#company-edit"><i class="fa fa-edit" style="margin-right:2px"></i> Edit</a></li>
+									<li class="divider"></li>
 
 
 									{{#isRestrictedMenuScope "CASES"}} {{else}}
