--- a/agile-frontend/WebContent/flatfull/tpl/deal-detail/deal-detail.html
+++ b/agile-frontend/WebContent/flatfull/tpl/deal-detail/deal-detail.html
@@ -78,8 +78,8 @@
                 <span class="caret m-l-none" style="margin-top:-11px;"></span>
                 </button>
                 <ul class="dropdown-menu pull-right deals-edit text-sm">
-        <!--<li><a href="#" class="deal-detail-edit-deal" id="deal_details"><i class="fa fa-edit" style="margin-right:2px;"></i> Edit</a></li>    
-                                    <li class="divider"></li>-->
+                  <li><a href="#" class="deal-detail-edit-deal" id="deal_details"><i class="fa fa-edit" style="margin-right:2px;"></i> Edit</a></li>    
+                  <li class="divider"></li>
                   <li><a href='#'  id="dealshow-note" class="deal-note">
                   <i class="icon-note" style="margin-right:2px;"></i> {{agile_lng_translate 'deal-view' 'add-note'}}</a></li>
                                     <li><a href='#'  id="dealdetail-archive" class="deal-detail-archive"><i class="fa fa-file-archive-o" style="margin-right:2px;"></i> {{agile_lng_translate 'deal-view' 'archive'}}</a></li>
@@ -378,8 +378,8 @@
                 <span class="caret m-l-none" style="margin-top:-11px;"></span>
                 </button>
                 <ul class="dropdown-menu pull-right deals-edit text-sm">
-       <!--<li><a href="#" class="deal-detail-edit-deal" id="deal_details"><i class="fa fa-edit" style="margin-right:2px;"></i> Edit</a></li>
-                                    <li class="divider"></li>-->
+                  <li><a href="#" class="deal-detail-edit-deal" id="deal_details"><i class="fa fa-edit" style="margin-right:2px;"></i> Edit</a></li>
+                  <li class="divider"></li>
                   <li><a href='#'  id="dealshow-note" class="deal-note"><i
                       class="icon-note" style="margin-right:2px;"></i> {{agile_lng_translate 'contact-details' 'add-note'}}</a></li>
                                     <li><a href='#'  id="dealdetail-archive" class="deal-detail-archive"><i class="fa fa-file-archive-o" style="margin-right:2px;"></i> {{agile_lng_translate 'deal-view' 'archive'}}</a></li>
