--- a/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp10.html
+++ b/agile-frontend/WebContent/misc/pagebuilder/elements/newtemp10.html
@@ -32,10 +32,10 @@
                                  
                      <div class="text-center">
                         <a href="#" style="border: none; text-decoration: none" class="propClone margin-left-15 app-store">
-                           <img border="0" src="http://prisma-ai.com/images/app-store-button.png"  width="192" height="60">
+                           <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/app-store-button.png"  width="192" height="60">
                         </a>
                         <a href="#" style="border: none; text-decoration: none" class="propClone play-store  margin-left-15">
-                           <img border="0" src="http://prisma-ai.com/images/gplay-button.jpg"  width="192" height="60">
+                           <img border="0" src="https://agilecrm.s3.amazonaws.com/pagebuilder/static/images/gplay-button.png"  width="192" height="60">
                         </a>
                      </div>
                
