show only plan name while showing downgrading restriction for free plan

--- a/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
+++ b/agile-frontend/WebContent/flatfull/tpl/warning-account-cancel.html
@@ -248,7 +248,7 @@
 </script>
 
 <script id="free-downgrade-restrictions-template" type="text/html">
-<div class="text-bold"><span class="p-r-xs">We see that you are using {{plan}} features, which we do not support in free plan</span><span class="free-downgrade-tooltip text-sm" data-toggle="tooltip" data-placement="bottom" data-original-title="
+<div class="text-bold"><span class="p-r-xs">We see that you are using {{plan}} plan features, which we do not support in free plan</span><span class="free-downgrade-tooltip text-sm" data-toggle="tooltip" data-placement="bottom" data-original-title="
   {{#if users}}
     {{agile_lng_translate 'Plan-and-upgrade' 'Users'}} - {{users.count}}; 
   {{/if}}
